--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "load-grunt-tasks": "^3.1.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
+    "grunt-stripcomments": "^0.3.1",
     "grunt-contrib-concat": "^0.5.0"
   },
   "version": "0.1.0"
