--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "sarine.viewer.utils",
-  "version": "1.0.1-0",
+  "version": "1.1.0",
   "main": "dist/sarine.viewer.utils.js",
   "ignore": [
     ".git",
