add name and repo

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "sarine.viewer.utils",
+  "title": "sarine.viewer.utils",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SarineTechnologies/sarine.viewer.utils.git"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-git": "^0.3.3",
