--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sarine.viewer.utils",
   "title": "sarine.viewer.utils",
+  "version": "1.9.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/SarineTechnologies/sarine.viewer.utils.git"
@@ -17,5 +18,7 @@
     "grunt-stripcomments": "^0.3.1",
     "grunt-contrib-concat": "^0.5.0"
   },
-  "version": "1.9.0"
+  "scripts": {
+    "build": "npm install && grunt --gruntfile GruntfileBundle.js bundle"
+  }
 }
